assets/queries/cloudFormation/aws/security_groups_with_unrestricted_access_to_ssh/test/negative3.json
{
  "Negative1IPv4_1": {
    "Type": "AWS::EC2::SecurityGroup",
    "Properties": {
      "GroupDescription": "Allow http to client host",
      "VpcId": { "Ref": "myVPC" },
      "SecurityGroupIngress": [
        {
          "IpProtocol": "udp",
          "FromPort": 22,
          "ToPort": 22,
          "CidrIp": "0.0.0.0/0"
        }
      ]
    }
  },
  "Negative1IPv4_2": {
    "Type": "AWS::EC2::SecurityGroup",
    "Properties": {
      "GroupDescription": "Allow http to client host",
      "VpcId": { "Ref": "myVPC" },
      "SecurityGroupIngress": [
        {
          "IpProtocol": "tcp",
          "FromPort": 100,
          "ToPort": 200,
          "CidrIp": "0.0.0.0/0"
        }
      ]
    }
  },
  "Negative1ArrayTestIPv4": {
    "Type": "AWS::EC2::SecurityGroup",
    "Properties": {
      "GroupDescription": "Allow http to client host",
      "VpcId": { "Ref": "myVPC" },
      "SecurityGroupIngress": [
        {
          "IpProtocol": "-1",
          "FromPort": 0,
          "ToPort": 30,
          "CidrIp": "192.0.0.0/16"
        },
        {
          "IpProtocol": "udp",
          "FromPort": 4000,
          "ToPort": 4000,
          "CidrIp": "192.120.0.0/16"
        }
      ]
    }
  },
  "Negative1IPv6_1": {
    "Type": "AWS::EC2::SecurityGroup",
    "Properties": {
      "GroupDescription": "Allow http to client host",
      "VpcId": { "Ref": "myVPC" },
      "SecurityGroupIngress": [
        {
          "IpProtocol": "udp",
          "FromPort": 22,
          "ToPort": 22,
          "CidrIpv6": "::/0"
        }
      ]
    }
  },
  "Negative1IPv6_2": {
    "Type": "AWS::EC2::SecurityGroup",
    "Properties": {
      "GroupDescription": "Allow http to client host",
      "VpcId": { "Ref": "myVPC" },
      "SecurityGroupIngress": [
        {
          "IpProtocol": "tcp",
          "FromPort": 100,
          "ToPort": 200,
          "CidrIpv6": "0000:0000:0000:0000:0000:0000:0000:0000/0"
        }
      ]
    }
  },
  "Negative1ArrayTestIPv6": {
    "Type": "AWS::EC2::SecurityGroup",
    "Properties": {
      "GroupDescription": "Allow http to client host",
      "VpcId": { "Ref": "myVPC" },
      "SecurityGroupIngress": [
        {
          "IpProtocol": "-1",
          "FromPort": 0,
          "ToPort": 30,
          "CidrIpv6": "2400:cb00::/32"
        },
        {
          "IpProtocol": "udp",
          "FromPort": 4000,
          "ToPort": 4000,
          "CidrIpv6": "2400:cb00::/32"
        }
      ]
    }
  }
}
