assets/queries/cloudFormation/aws/security_groups_with_unrestricted_access_to_ssh/test/negative4.json
{
  "Negative2SecurityGroup": {
    "Type": "AWS::EC2::SecurityGroup",
    "Properties": {
      "GroupDescription": "Security group for negative test cases",
      "VpcId": { "Ref": "MyVPC" }
    }
  },
  "Negative2IPv4Ingress1": {
    "Type": "AWS::EC2::SecurityGroupIngress",
    "Properties": {
      "GroupId": { "Ref": "Negative2SecurityGroup" },
      "IpProtocol": "udp",
      "FromPort": 22,
      "ToPort": 22,
      "CidrIp": "0.0.0.0/0"
    }
  },
  "Negative2IPv4Ingress2": {
    "Type": "AWS::EC2::SecurityGroupIngress",
    "Properties": {
      "GroupId": { "Ref": "Negative2SecurityGroup" },
      "IpProtocol": "tcp",
      "FromPort": 100,
      "ToPort": 200,
      "CidrIp": "0.0.0.0/0"
    }
  },
  "Negative2IPv4Ingress3": {
    "Type": "AWS::EC2::SecurityGroupIngress",
    "Properties": {
      "GroupId": { "Ref": "Negative2SecurityGroup" },
      "IpProtocol": "-1",
      "FromPort": 0,
      "ToPort": 30,
      "CidrIp": "8.8.0.0/16"
    }
  },
  "Negative2IPv4Ingress4": {
    "Type": "AWS::EC2::SecurityGroupIngress",
    "Properties": {
      "GroupId": { "Ref": "Negative2SecurityGroup" },
      "IpProtocol": "udp",
      "FromPort": 4000,
      "ToPort": 4000,
      "CidrIp": "8.8.0.0/16"
    }
  },
  "Negative2IPv6Ingress1": {
    "Type": "AWS::EC2::SecurityGroupIngress",
    "Properties": {
      "GroupId": { "Ref": "Negative2SecurityGroup" },
      "IpProtocol": "udp",
      "FromPort": 22,
      "ToPort": 22,
      "CidrIpv6": "::/0"
    }
  },
  "Negative2IPv6Ingress2": {
    "Type": "AWS::EC2::SecurityGroupIngress",
    "Properties": {
      "GroupId": { "Ref": "Negative2SecurityGroup" },
      "IpProtocol": "tcp",
      "FromPort": 4000,
      "ToPort": 4000,
      "CidrIpv6": "0000:0000:0000:0000:0000:0000:0000:0000/0"
    }
  },
  "Negative2IPv6Ingress3": {
    "Type": "AWS::EC2::SecurityGroupIngress",
    "Properties": {
      "GroupId": { "Ref": "Negative2SecurityGroup" },
      "IpProtocol": "-1",
      "FromPort": 0,
      "ToPort": 30,
      "CidrIpv6": "2400:cb00::/32"
    }
  },
  "Negative2IPv6Ingress4": {
    "Type": "AWS::EC2::SecurityGroupIngress",
    "Properties": {
      "GroupId": { "Ref": "Negative2SecurityGroup" },
      "IpProtocol": "udp",
      "FromPort": 4000,
      "ToPort": 4000,
      "CidrIpv6": "2400:cb00::/32"
    }
  }
}
