assets/queries/cloudFormation/aws/security_groups_with_unrestricted_access_to_ssh/test/positive4.json
{
  "Resources": {
    "DualStackSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security group for IPv4 and IPv6 ingress rules",
        "VpcId": { "Ref": "MyVPC" }
      }
    },
    "IPv4Ingress1": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": { "Ref": "DualStackSecurityGroup" },
        "IpProtocol": "-1",
        "FromPort": 10,
        "ToPort": 10,
        "CidrIp": "0.0.0.0/0"
      }
    },
    "IPv4Ingress2": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": { "Ref": "DualStackSecurityGroup" },
        "IpProtocol": "tcp",
        "FromPort": 10,
        "ToPort": 40,
        "CidrIp": "0.0.0.0/0"
      }
    },
    "IPv6Ingress1": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": { "Ref": "DualStackSecurityGroup" },
        "IpProtocol": "tcp",
        "FromPort": 0,
        "ToPort": 30,
        "CidrIpv6": "::/0"
      }
    },
    "IPv6Ingress2": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": { "Ref": "DualStackSecurityGroup" },
        "IpProtocol": "tcp",
        "FromPort": 10,
        "ToPort": 40,
        "CidrIpv6": "0000:0000:0000:0000:0000:0000:0000:0000/0"
      }
    }
  }
}
